@@ -1,3 +1,11 @@
+2005-07-08  Sam Steingold  <sds@gnu.org>
+
+	* modules/bindings/win32/win32.lisp: do NOT use full paths for
+	:LIBRARY arguments (reverses the 2005-06-06 patch) for portability
+	of binary distributions [it now works on cygwin, go figure...]
+	(GetStdHandle, STD_INPUT_HANDLE, STD_OUTPUT_HANDLE, STD_ERROR_HANDLE)
+	(ReadFile, WriteFile, ReadConsoleA, WriteConsoleA): added i/o interface
+
 2005-07-08  Jörg Höhle  <hoehle@users.sourceforge.net>
 
 	* modules/bindings/win32/win32.lisp: WINAPI means :stdc-stdcall
